# pynvfinstnorm

./: README.md  pyproject.toml
pynvfinstnorm/: __init__.py  instance_norm_nvfuser.py
test/: test_instance_norm_nvfuser.py
